<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelloUser">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="188dp"
        android:layout_height="160dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="142dp"
        android:background="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txtHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="169dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/txtHello"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.322"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="220dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/txtText"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLoginAgin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="100dp"
        android:text="@string/btnLoginAgain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>