<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/txtTLRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/app_title_Register"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="303dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTLRegister"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtPassWord"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="289dp"
        android:text="@string/txtPassWord"
        app:layout_constraintBottom_toTopOf="@+id/editPassWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtRetypePW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="242dp"
        android:text="@string/txtRetypePW"
        app:layout_constraintBottom_toTopOf="@+id/editRetypePW"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editPassWord"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="53dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUserName"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="318dp"
        android:text="@string/txtEmail"
        app:layout_constraintBottom_toTopOf="@+id/editEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editRetypePW"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassWord"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editUserName"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="53dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="287dp"
        android:text="@string/txtUserName"
        app:layout_constraintBottom_toTopOf="@+id/editUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCreateAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCreateAcc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877" />

</androidx.constraintlayout.widget.ConstraintLayout>